	  (stub as of now).
- cut.c:
  add_to_cutbuffer()
	- Remove useless statements (Rocco).
  cut_marked_segment()
	- Add bizarre copy of bot node, else *BSD goes ballistic (fixes
          BUG #60).
	- Added 'destructive' argument.  Allows the selected text to be
	  added to the cutbuffer without changing the contents of the 
	  file.  This allows writing selection to separate files.
- faq.html:
	- Brought the FAQ up to date, many little changes (Jordi).
- files.c:
  do_browser()
	- Minor fixes to the processing of SELECT function (Rocco)
	- Added the "Goto Directory" code (Rocco)
	- Don't shift the size of the file is it's less than 1K. Fixed
	  files less than 1K being displayed as 0B (Rocco).
  do_writeout()
	- New code to allow writing selected text to a separate file.
	  When this is done, the current state is prserved.
  write_file()
	- New arg, nonamechange, means whether or not to update the
	  current filename after writing the file out.
- global.c:
	- Updated some of the lists for the "Goto Directory" code (Rocco)
- move.c:
  page_up()
	- Rewritten with a loop to make screen updates work when
	  mark is set (fixes bug #59).
- nano.1:
	- Added the missing -r flag (Jordi).
- nano.c:
  do_alt_speller()
	- Reposition cursor on same line as before ^T was called (Rocco)
  ABCD(), main() 
	- Add Alt-whatever-[a-d] support as well as Alt-whatever-[A-D].
  main()
	- Code to silently process "-g" and "-j" (Rocco)
- nano.h:
	- Updated the BROWSER_LIST_LEN for the "Goto Directory" code (Rocco)
- proto.h:
	- New shortcut list added: gotodir_list (Rocco).
- search.c:
  do_gotoline()
	- Optimizations, remove "$" goes-to-last-line, less messages (Rocco)
  do_replace()
	- If we manage to make it in somehow with VIEW_MODE on, abort
	  nicely (fixes BUG #59).
- utils.c
  strcasestr()
	- Replaced by mutt's mutt_stristr function, because the thought
	  of dynamically allocating memory and copying each line in a file
	  to do a search or replace was causing me to lose sleep.